verif/test/deca/context/invalid/invalid-repeated-declaration-verif.res
src/test/deca/context/invalid/invalid-repeated-declaration.deca:11:11: Variable 'x' is already defined in the environement of expressions
